--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ build/
 /support/jolie-gwt/target/
 /extensions/sodep/target/
 /support/jolie-java/target/
+/support/metaservice-java/target/
+/extensions/https/target/
