--- a/buildconfig/build.properties
+++ b/buildconfig/build.properties
@@ -31,4 +31,5 @@ project.jolie2surface=tools/jolie2surface
 project.jolie2wsdl=tools/jolie2wsdl
 project.joliedoc=tools/joliedoc
 project.wsdl2jolie=tools/wsdl2jolie
+project.swagger2jolie=tools/swagger2jolie
 project.tests.ws-test=test/extensions/private/WS-test
