added jolie2swagger tool, wip
Former-commit-id: f82c8d4784fe71240f89f44ea83acc212a8f183d

--- a/buildconfig/build.properties
+++ b/buildconfig/build.properties
@@ -32,4 +32,5 @@ project.jolie2wsdl=tools/jolie2wsdl
 project.joliedoc=tools/joliedoc
 project.wsdl2jolie=tools/wsdl2jolie
 project.swagger2jolie=tools/swagger2jolie
+project.jolie2swagger=tools/jolie2swagger
 project.tests.ws-test=test/extensions/private/WS-test
