--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,7 @@
-/libjolie/target/
-/javaServices/coreJavaServices/nbproject/private/
-/javaServices/monitorJavaServices/nbproject/private/
-/extensions/btl2cap/nbproject/private/
-/extensions/http/target/
-/extensions/http/target/
-/extensions/https/nbproject/private/
-/extensions/jsonrpc/nbproject/private/
-/extensions/localsocket/nbproject/private/
-/extensions/rmi/nbproject/private/
-/extensions/soap/nbproject/private/
-/extensions/sodep/nbproject/private/
-/extensions/sodeps/nbproject/private/
-/extensions/xmlrpc/nbproject/private/
-/lib/jolie-ssl/nbproject/private/
-/lib/jolie-xml/nbproject/private/
-/lib/xsom/nbproject/private/
-/support/jolie-gwt/nbproject/private/
-/support/jolie-java/nbproject/private/
-/support/metaservice-java/nbproject/private/
-/tools/jolie2dummy/nbproject/private/
-/tools/jolie2java/nbproject/private/
-/tools/jolie2plasma/nbproject/private/
-/tools/jolie2wsdl/nbproject/private/
-/tools/joliec/nbproject/private/
-/tools/joliedoc/nbproject/private/
-/libjolie/build/
-/jolie/build/
-/libjolie/dist/
-/jolie/dist/
 dist/
 build/
-/extensions/javascript/nbproject/private/
-/extensions/local/nbproject/private/
-/lib/jolie-js/nbproject/private/
-/tools/jolie2surface/nbproject/private/
-/lib/xsom/build
 /jolie/.idea/workspace.xml
 /jolie/.idea/tasks.xml
-/extensions/soaps/nbproject/private/
-/extensions/auto/nbproject/private/
 /libjolie/target/
 /jolie/target/
 /javaServices/coreJavaServices/target/
@@ -69,3 +32,4 @@ build/
 /tools/jolie2plasma/target/
 /tools/jolie2wsdl/target/
 /tools/joliec/target/
+/tools/joliedoc/target/
