--- a/extensions/javascript/pom.xml
+++ b/extensions/javascript/pom.xml
@@ -18,7 +18,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
     <name>javascript</name>
-    <description>The basic library used for Jolie code parsing and analysis.</description>
+    <description>Javascript protocol for Jolie.</description>
     <build>
         <finalName>${project.artifactId}.jar</finalName>
         <plugins>
