--- a/extensions/soap/pom.xml
+++ b/extensions/soap/pom.xml
@@ -18,7 +18,7 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<name>soap</name>
-	<description>The basic library used for Jolie code parsing and analysis.</description>
+	<description>Soap protocol for Jolie.</description>
 	<build>
 		<finalName>${project.artifactId}.jar</finalName>
 		<plugins>
@@ -41,7 +41,6 @@
 									<version>${jolie.version}</version>
 									<type>jar</type>
 									<destFileName>xsom.jar</destFileName>
-
 								</artifactItem>
 							</artifactItems>
 							<outputDirectory>${jolie.installation.directory}/lib</outputDirectory>
