--- a/extensions/sodep/pom.xml
+++ b/extensions/sodep/pom.xml
@@ -18,7 +18,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
     <name>sodep</name>
-    <description>The basic library used for Jolie code parsing and analysis.</description>
+    <description>Sodep protocol for Jolie</description>
     <build>
         <finalName>${project.artifactId}.jar</finalName>
         <plugins>
@@ -56,12 +56,6 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>jolie</artifactId>
             <version>${jolie.version}</version>
-        </dependency>
-        <!--dependency>
-            <groupId>org.ini4j</groupId>
-            <artifactId>ini4j</artifactId>
-            <version>0.5.4</version>
-        </dependency-->
-
+		</dependency>
     </dependencies>
 </project>
