--- a/javaServices/monitorJavaServices/pom.xml
+++ b/javaServices/monitorJavaServices/pom.xml
@@ -7,9 +7,9 @@
 		<artifactId>distribution</artifactId>
 		<relativePath>../../pom.xml</relativePath>
 		<version>1.0.0</version>
-	</parent>
+	</parent>   
 	<groupId>org.jolie-lang</groupId>
-	<artifactId>jolie-xml</artifactId>
+	<artifactId>monitorJavaServices</artifactId>
 	<version>${jolie.version}</version>
 	<packaging>jar</packaging>
 	<properties>
@@ -17,35 +17,58 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
-	<name>jolie-xml</name>
-	<description>The basic library used by Jolie for XML handling.</description>
+	<name>monitorJavaServices</name>
+	<description>Monitor Java services.</description>
 	<build>
-		<finalName>${project.artifactId}.jar</finalName>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.1</version>
+				<executions>
+					<execution>
+						<phase>validate</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<tasks>
+								<echo>Displaying value of 'testproperty' property</echo>
+								<echo>[basedir] ${basedir}</echo>
+							</tasks>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.6</version>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<phase>install</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${jolie.installation.directory}/</outputDirectory>
+							<resources>          
+								<resource>
+									<directory>../include</directory>
+									<filtering>true</filtering>
+								</resource>
+							</resources>              
+						</configuration>                     
+					</execution>
+				</executions>
+			</plugin>
+            
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
 				<version>3.1.1</version>
 				<executions>
-					<execution>
-						<id>copy</id>
-						<phase>install</phase>
-						<goals>
-							<goal>copy</goal>
-						</goals>
-						<configuration>
-							<artifactItems>
-								<artifactItem>
-									<groupId>wsdl4j</groupId>
-									<artifactId>wsdl4j</artifactId>
-									<version>1.6.3</version>
-									<type>jar</type>
-									<destFileName>wsdl4j.jar</destFileName>
-								</artifactItem>
-							</artifactItems>
-							<outputDirectory>${jolie.installation.directory}/lib</outputDirectory>
-						</configuration>
-					</execution>
 					<execution>
 						<id>copy-installed</id>
 						<phase>install</phase>
@@ -55,26 +78,21 @@
 						<configuration>
 							<artifactItems>
 								<artifactItem>
-									<groupId>org.jolie-lang</groupId>
+									<groupId>${project.groupId}</groupId>
 									<artifactId>${project.artifactId}</artifactId>
 									<version>${jolie.version}</version>
-									<type>jar</type>
+									<type>${project.packaging}</type>
 									<destFileName>${project.artifactId}.jar</destFileName>
 								</artifactItem>
 							</artifactItems>
-							<outputDirectory>${jolie.installation.directory}/lib</outputDirectory>
+							<outputDirectory>${jolie.installation.directory}/javaServices</outputDirectory>
 						</configuration>
-					</execution>
+					</execution>	
 				</executions>
 			</plugin>
 		</plugins>
-	</build>
+	</build>	
 	<dependencies>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>jolie</artifactId>
-			<version>${jolie.version}</version>
-		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>libjolie</artifactId>
@@ -82,14 +100,8 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>xsom</artifactId>
+			<artifactId>jolie</artifactId>
 			<version>${jolie.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>wsdl4j</groupId>
-			<artifactId>wsdl4j</artifactId>
-			<version>1.6.3</version>
-		</dependency>
-
+		</dependency>		
 	</dependencies>
 </project>
