--- a/lib/jolie-ssl/pom.xml
+++ b/lib/jolie-ssl/pom.xml
@@ -18,7 +18,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
     <name>jolie-ssl</name>
-    <description>The basic library used for Jolie code parsing and analysis.</description>
+    <description>The basic library used by Jolie for SSL handling</description>
     <build>
         <finalName>${project.artifactId}.jar</finalName>
         <plugins>
