--- a/build.xml
+++ b/build.xml
@@ -89,6 +89,10 @@ jolie %JOLIE_HOME%\tools\swagger2jolie.ol %*
 		<echo file="${dist.launchers.windows}/jolie2swagger.bat">@echo off
 jolie %JOLIE_HOME%\tools\jolie2swagger.ol %*
 		</echo>
+		<echo message="Creating jester Windows launcher script..." />
+		<echo file="${dist.launchers.windows}/jester.bat">@echo off
+jolie %JOLIE_HOME%\tools\jester.ol %*
+		</echo>
 	</target>
 
     <target name="-install-unix-launchers" unless="isWindows">
@@ -181,6 +185,12 @@ jolie $JOLIE_HOME/tools/swagger2jolie.ol "$@"
 jolie $JOLIE_HOME/tools/jolie2swagger.ol "$@"
 		</echo>
 		<chmod file="${dist.launchers.unix}/jolie2swagger" perm="a+x"/>
+
+		<echo message="Creating jester Unix launcher script..." />
+		<echo file="${dist.launchers.unix}/jester">#!/bin/sh
+jolie $JOLIE_HOME/tools/jester.ol "$@"
+		</echo>
+		<chmod file="${dist.launchers.unix}/jester" perm="a+x"/>
 
 		<echo message="Creating JolieC (Jolie Compiler) Unix launcher script..." />
 		<echo file="${dist.launchers.unix}/joliec">#!/bin/sh
@@ -365,6 +375,7 @@ Please make sure that:
 				<file file="${project.wsdl2jolie}/wsdl2jolie.ol"/>
 				<file file="${project.swagger2jolie}/swagger2jolie.ol"/>
 				<file file="${project.jolie2swagger}/jolie2swagger.ol"/>
+				<file file="${project.jester}/jester.ol"/>
 			</resources>
 		</copy>
 
