--- a/javaServices/coreJavaServices/pom.xml
+++ b/javaServices/coreJavaServices/pom.xml
@@ -131,7 +131,7 @@
 									<artifactId>smackx</artifactId>
 									<version>3.0.4</version>
 									<type>jar</type>
-									<destFileName>smack.jar</destFileName>
+									<destFileName>smackx.jar</destFileName>
 								</artifactItem>
 								<artifactItem>
 									<groupId>wsdl4j</groupId>
@@ -322,6 +322,29 @@
 			<artifactId>smackx</artifactId>
 			<version>3.0.4</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-core</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.xml</groupId>
+			<artifactId>jaxp-api</artifactId>
+			<version>1.4.2</version>
+		</dependency>
+
+
 
 
 
