--- a/extensions/soap/pom.xml
+++ b/extensions/soap/pom.xml
@@ -1,92 +1,104 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.jolie-lang</groupId>
-		<artifactId>distribution</artifactId>
-		<relativePath>../../pom.xml</relativePath>
-		<version>1.0.0</version>
-	</parent>
-	<groupId>org.jolie-lang</groupId>
-	<artifactId>soap</artifactId>
-	<version>${jolie.version}</version>
-	<packaging>jar</packaging>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-	</properties>
-	<name>soap</name>
-	<description>Soap protocol for Jolie.</description>
-	<build>
-		<finalName>${project.artifactId}.jar</finalName>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>3.1.1</version>
-				<executions>
-					<execution>
-						<id>copy</id>
-						<phase>install</phase>
-						<goals>
-							<goal>copy</goal>
-						</goals>
-						<configuration>
-							<artifactItems>
-								<artifactItem>
-									<groupId>${project.groupId}</groupId>
-									<artifactId>xsom</artifactId>
-									<version>${jolie.version}</version>
-									<type>jar</type>
-									<destFileName>xsom.jar</destFileName>
-								</artifactItem>
-							</artifactItems>
-							<outputDirectory>${jolie.installation.directory}/lib</outputDirectory>
-							<overWriteIfNewer>true</overWriteIfNewer>
-						</configuration>
-					</execution>
-					<execution>
-						<id>copy-installed</id>
-						<phase>install</phase>
-						<goals>
-							<goal>copy</goal>
-						</goals>
-						<configuration>
-							<artifactItems>
-								<artifactItem>
-									<groupId>org.jolie-lang</groupId>
-									<artifactId>${project.artifactId}</artifactId>
-									<version>${jolie.version}</version>
-									<type>jar</type>
-									<destFileName>${project.artifactId}.jar</destFileName>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.jolie-lang</groupId>
+        <artifactId>distribution</artifactId>
+        <relativePath>../../pom.xml</relativePath>
+        <version>1.0.0</version>
+    </parent>
+    <groupId>org.jolie-lang</groupId>
+    <artifactId>soap</artifactId>
+    <version>${jolie.version}</version>
+    <packaging>jar</packaging>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+    <name>soap</name>
+    <description>Soap protocol for Jolie.</description>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.1.1</version>
+                <executions>
+                    <execution>
+                        <id>copy</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>${project.groupId}</groupId>
+                                    <artifactId>xsom</artifactId>
+                                    <version>${jolie.version}</version>
+                                    <type>jar</type>
+                                    <destFileName>xsom.jar</destFileName>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>javax.xml.soap</groupId>
+                                    <artifactId>javax.xml.soap-api</artifactId>
+                                    <version>1.4.0</version>
+                                    <type>jar</type>
+                                    <destFileName>javax.xml.soap-api.jar</destFileName>
+                                </artifactItem>
+                            </artifactItems>
+                            <outputDirectory>${jolie.installation.directory}/lib</outputDirectory>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>copy-installed</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.jolie-lang</groupId>
+                                    <artifactId>${project.artifactId}</artifactId>
+                                    <version>${jolie.version}</version>
+                                    <type>jar</type>
+                                    <destFileName>${project.artifactId}.jar</destFileName>
 
-								</artifactItem>
-							</artifactItems>
-							<outputDirectory>${jolie.installation.directory}/extensions</outputDirectory>
-							<overWriteIfNewer>true</overWriteIfNewer>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
-	<dependencies>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>jolie</artifactId>
-			<version>${jolie.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>xsom</artifactId>
-			<version>${jolie.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>http</artifactId>
-			<version>${jolie.version}</version>
-		</dependency>
-	</dependencies>
+                                </artifactItem>
+                            </artifactItems>
+                            <outputDirectory>${jolie.installation.directory}/extensions</outputDirectory>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>jolie</artifactId>
+            <version>${jolie.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>xsom</artifactId>
+            <version>${jolie.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>http</artifactId>
+            <version>${jolie.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.soap</groupId>
+            <artifactId>javax.xml.soap-api</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+
+    </dependencies>
 </project>
