--- a/buildconfig/build.properties
+++ b/buildconfig/build.properties
@@ -33,4 +33,5 @@ project.joliedoc=tools/joliedoc
 project.wsdl2jolie=tools/wsdl2jolie
 project.swagger2jolie=tools/swagger2jolie
 project.jolie2swagger=tools/jolie2swagger
+project.jolier=tools/jolier
 project.tests.ws-test=test/extensions/private/WS-test
