--- a/build.xml
+++ b/build.xml
@@ -85,9 +85,9 @@ jolie %JOLIE_HOME%\tools\wsdl2jolie.ol %*
 		<echo file="${dist.launchers.windows}/swagger2jolie.bat">@echo off
 jolie %JOLIE_HOME%\tools\swagger2jolie.ol %*
 		</echo>
-		<echo message="Creating jolie2swagger Windows launcher script..." />
-		<echo file="${dist.launchers.windows}/jolie2swagger.bat">@echo off
-jolie %JOLIE_HOME%\tools\jolie2swagger.ol %*
+		<echo message="Creating jolie2openapi Windows launcher script..." />
+		<echo file="${dist.launchers.windows}/jolie2openapi.bat">@echo off
+jolie %JOLIE_HOME%\tools\jolie2openapi.ol %*
 		</echo>
 		<echo message="Creating jolier Windows launcher script..." />
 		<echo file="${dist.launchers.windows}/jolier.bat">@echo off
@@ -180,11 +180,11 @@ jolie $JOLIE_HOME/tools/swagger2jolie.ol "$@"
 		</echo>
 		<chmod file="${dist.launchers.unix}/swagger2jolie" perm="a+x"/>
 
-		<echo message="Creating jolie2swagger Unix launcher script..." />
-		<echo file="${dist.launchers.unix}/jolie2swagger">#!/bin/sh
-jolie $JOLIE_HOME/tools/jolie2swagger.ol "$@"
+		<echo message="Creating jolie2openapi Unix launcher script..." />
+		<echo file="${dist.launchers.unix}/jolie2openapi">#!/bin/sh
+jolie $JOLIE_HOME/tools/jolie2openapi.ol "$@"
 		</echo>
-		<chmod file="${dist.launchers.unix}/jolie2swagger" perm="a+x"/>
+		<chmod file="${dist.launchers.unix}/jolie2openapi" perm="a+x"/>
 
 		<echo message="Creating jolier Unix launcher script..." />
 		<echo file="${dist.launchers.unix}/jolier">#!/bin/sh
@@ -374,7 +374,7 @@ Please make sure that:
 				<file file="${project.joliedoc}/dist/joliedoc.jar"/>
 				<file file="${project.wsdl2jolie}/wsdl2jolie.ol"/>
 				<file file="${project.swagger2jolie}/swagger2jolie.ol"/>
-				<file file="${project.jolie2swagger}/jolie2swagger.ol"/>
+				<file file="${project.jolie2openapi}/jolie2openapi.ol"/>
 				<file file="${project.jolier}/jolier.ol"/>
 			</resources>
 		</copy>
