--- a/pom.xml
+++ b/pom.xml
@@ -1,114 +1,113 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>org.jolie-lang</groupId>
-    <artifactId>distribution</artifactId>
-    <version>1.0.0</version>
-    <packaging>pom</packaging>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jolie.installation.directory>/dist/jolie/</jolie.installation.directory>
-        <jolie.installation.directory.executable>/dist/launchers/</jolie.installation.directory.executable>
-        <jolie.version>1.8.2</jolie.version>
-    </properties>
-    <description>The distribution of the Jolie language, containing interpreter and extensions.</description>
-    <name>distribution</name>
-    <modules>
-                
-        <module>libjolie</module>
-        <module>jolie</module>
-        <module>lib/jolie-js</module>
-        <module>lib/jolie-ssl</module>
-        <module>lib/jolie-xml</module>
-        <module>lib/xsom</module>
-        <module>support/jolie-gwt</module>
-        <module>support/jolie-java</module>
-        <module>support/metaservice-java</module>
-        <module>extensions/auto</module>
-        <module>extensions/btl2cap</module>
-        <module>extensions/sodep</module>
-        <module>extensions/http</module> 
-        <module>extensions/https</module> 
-        <module>extensions/javascript</module>
-        <module>extensions/jsonrpc</module>  
-        <module>extensions/local</module> 
-        <module>extensions/localsocket</module> 
-        <module>extensions/rmi</module> 
-        <module>extensions/soap</module> 
-        <module>extensions/soaps</module> 
-        <module>extensions/sodeps</module> 
-        <module>extensions/xmlrpc</module> 
-        <module>tools/jolie2dummy</module>
-        <module>tools/jolie2java</module>
-        <module>tools/jolie2plasma</module>
-        <module>tools/jolie2surface</module>
-        <module>tools/jolie2wsdl</module>
-        <module>tools/joliec</module>
-        <module>tools/joliedoc</module>
-        <module>javaServices/coreJavaServices</module>
-        <module>javaServices/monitorJavaServices</module>
-    </modules>
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>3.1.0</version>
-                <executions>
-                    <execution>
-                        <id>copy-resources</id>
-                        <!-- here the phase you need -->
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${jolie.installation.directory}/include</outputDirectory>
-                            <resources>          
-                                <resource>
-                                    <directory>${basedir}/include</directory>
-                                    <filtering>true</filtering>
-                                </resource>
-                            </resources>              
-                        </configuration>            
-                    </execution>
-                    <execution>
-                        <id>copy-launchers</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${jolie.installation.directory.executable}</outputDirectory>
-                            <resources>          
-                                <resource>
-                                    <directory>${basedir}/launchers</directory>
-                                    <filtering>true</filtering>
-                                </resource>
-                            </resources>              
-                        </configuration>            
-                    </execution>
-                    <execution>
-                        <id>copy-wsdl2jolie</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${jolie.installation.directory}/tools</outputDirectory>
-                            <resources>          
-                                <resource>
-                                    <directory>${basedir}/tools/wsdl2jolie</directory>
-                                   <includes>
-                                    <include>wsdl2jolie.ol</include>
-                                </includes>
-                                    <filtering>true</filtering>
-                                </resource>
-                            </resources>              
-                        </configuration>            
-                    </execution>
-                     
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.jolie-lang</groupId>
+	<artifactId>distribution</artifactId>
+	<version>1.0.0</version>
+	<packaging>pom</packaging>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<jolie.installation.directory>/dist/jolie/</jolie.installation.directory>
+		<jolie.installation.directory.executable>/dist/launchers/</jolie.installation.directory.executable>
+		<jolie.version>1.8.2</jolie.version>
+	</properties>
+	<description>The distribution of the Jolie language, containing interpreter and extensions.</description>
+	<name>distribution</name>
+	<modules>
+		<module>libjolie</module>
+		<module>jolie</module>
+		<module>lib/jolie-js</module>
+		<module>lib/jolie-ssl</module>
+		<module>lib/jolie-xml</module>
+		<module>lib/xsom</module>
+		<module>support/jolie-gwt</module>
+		<module>support/jolie-java</module>
+		<module>support/metaservice-java</module>
+		<module>extensions/auto</module>
+		<module>extensions/btl2cap</module>
+		<module>extensions/sodep</module>
+		<module>extensions/http</module>
+		<module>extensions/https</module>
+		<module>extensions/javascript</module>
+		<module>extensions/jsonrpc</module>
+		<module>extensions/local</module>
+		<module>extensions/localsocket</module>
+		<module>extensions/rmi</module>
+		<module>extensions/soap</module>
+		<module>extensions/soaps</module>
+		<module>extensions/sodeps</module>
+		<module>extensions/xmlrpc</module>
+		<module>tools/jolie2dummy</module>
+		<module>tools/jolie2java</module>
+		<module>tools/jolie2plasma</module>
+		<module>tools/jolie2surface</module>
+		<module>tools/jolie2wsdl</module>
+		<module>tools/joliec</module>
+		<module>tools/joliedoc</module>
+		<module>javaServices/coreJavaServices</module>
+		<module>javaServices/monitorJavaServices</module>
+	</modules>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.1.0</version>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${jolie.installation.directory}/include</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${basedir}/include</directory>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+					<execution>
+						<id>copy-launchers</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${jolie.installation.directory.executable}</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${basedir}/launchers</directory>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+					<execution>
+						<id>copy-wsdl2jolie</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${jolie.installation.directory}/tools</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${basedir}/tools/wsdl2jolie</directory>
+									<includes>
+										<include>wsdl2jolie.ol</include>
+									</includes>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
