--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jolie.installation.directory>dist/jolie/</jolie.installation.directory>
 		<jolie.installation.directory.executable>dist/launchers/</jolie.installation.directory.executable>
-		<jolie.version>1.8.2</jolie.version>
+		<jolie.version>1.9.0-git</jolie.version>
 	</properties>
 	<description>The distribution of the Jolie language, containing interpreter and extensions.</description>
 	<name>distribution</name>
